tests/expected/task-1/26-non-record-access.uc.out
---
test: run suites/task-1/26-non-record-access.uc
---
suites/task-1/26-non-record-access.uc:4:12: execution error: Non-record (1) field access
     return r.x;
             ^


exit: 1
